wordpress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: rewrite
spec:
  ingressClassName: nginx
  rules:
  - host: kube1.playground.kabisa.io
    http:
      paths:
      - path: /wordpress(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
  - host: kube1.playground.kabisa.io
    http:
      paths:
      - path: /dbadmin(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
  tls:
  - hosts:
    - kube1.playground.kabisa.io
    secretName: letsencrypt-nginx
